# keeplin

./: .gitignore  ARCHITECTURE.md  Cargo.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml
.cargo/: config.toml  config.toml.md
.github/workflows/: ci.yml  ci.yml.md
keeplin-core/: Cargo.md  Cargo.toml
keeplin-core/src/: encryption.md  encryption.rs  error.md  error.rs  lib.md  lib.rs  linking.md  linking.rs  links.md  links.rs  migrate.md  migrate.rs  models.md  models.rs
keeplin-core/src/storage/: backend.md  backend.rs  db.md  db.rs  fs.md  fs.rs  mod.md  mod.rs  note_log.md  note_log.rs
keeplin-core/src/sync/: engine.md  engine.rs  mod.md  mod.rs
keeplin-core/tests/: db_backend.md  db_backend.rs  encryption.md  encryption.rs  fs_backend.md  fs_backend.rs  migrate.rs  sync.md  sync.rs  ws_sync.md  ws_sync.rs
keeplin-daemon/: Cargo.md  Cargo.toml  build.md  build.rs
keeplin-daemon/proto/: keeplin.proto  keeplin.proto.md
keeplin-daemon/src/: auth.md  auth.rs  config.md  config.rs  event_backend.md  event_backend.rs  main.md  main.rs  metrics.md  metrics.rs  proto.md  proto.rs  rest.md  rest.rs  server.md  server.rs
scripts/: build.sh  build.sh.md
