[workspace]
members = [
    "keeplin-core",
    "keeplin-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Keeplin Contributors"]
license = "MIT"

# Release profile. Cargo only reads `[profile.*]` from a manifest (Cargo.toml),
# never from `.cargo/config.toml`, so these optimisations must live here to take
# effect: full link-time optimisation, a single codegen unit for maximum inlining,
# and symbol stripping to shrink the shipped daemon binary.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
tempfile = "3"
