[package]
name = "keeplin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true

libsql = { version = "0.6", features = ["core"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

aes-gcm = { version = "0.10", features = ["zeroize"] }
argon2 = "0.5"
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
