[package]
name = "keeplin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true

# Only the local-SQLite engine is used (DbBackend opens databases with
# `Builder::new_local`). Disabling default features drops libsql's remote
# replication stack (hyper-rustls / rustls 0.22 / rustls-webpki 0.102), which is
# both unused here and the sole source of the previously-ignored RUSTSEC advisories.
libsql = { version = "0.6", default-features = false, features = ["core"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

aes-gcm = { version = "0.10", features = ["zeroize"] }
argon2 = "0.5"
base64 = "0.22"
rmp-serde = "1"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
