[package]
name = "keeplin-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
keeplin-core = { path = "../keeplin-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true

tonic = "0.12"
prost = "0.13"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
